2005-12-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>
   * Source/Search/LCBooleanScorer.m:
   * Source/Search/LCBooleanMinShouldMatch.m:
   Pass all tests: Result: 51 classes, 127 methods, 651972 tests, 0 failed
   * Source/Analysis/LCAnalyzer.m:
   * Source/Index/LCDocumentWriter.m:
   * Source/Search/LCSmiliarity.m:
   Update to date.

2005-12-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/QueryParser/LCQueryParser.m:
   * Headers/QueryParser/LCQueryParser.h:
   Add new method.
   * Source/Search/LCBooleanQuery.m:
   * Source/Search/LCBooleanScorer.m:
   Support minimumNumberShouldMatch.
   * Pass all tests.
   Result: 46 classes, 114 methods, 651959 tests, 0 failed

2005-12-12 Quentin Mathe <qmathe@club-internet.fr>

   * Source/Search/LCFieldSortedHitQueue.m:
    Fixed compilation on Linux (Ubuntu Linux x86) broken by the previous commit,
    float.h is not included by default on most platforms.
    Result: 49 classes, 112 methods, 352367 tests, 12 failed
    (Failed tests are located in TestWildcard.m)
   * Headers/Util/LCSmallFloat.h:
   * Source/Util/LCSmallFloat.m:
   * Source/Util/TestSmallFloat.m:
   New class and test.
   * Source/Search/LCBooleanQuery.m:
   Warn when maxClauseCount < 1.

2005-12-11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCFieldCacheImpl.m:
   * Source/Search/LCFieldCache.m:
   * Headers/Search/LCFieldCacheImpl.h:
   * Headers/Search/LCFieldCache.h:
   Implement parsers.
   * Source/Search/LCFieldSortedHitQueue.m:
   * Source/Search/TestSort.m:
   Bugs fixed.
   * Pass all test units on Cocoa:
   Result: 49 classes, 111 methods, 352364 tests, 0 failed

2005-12-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Pass all test units on Cocoa:
   Result: 49 classes, 109 methods, 352235 tests, 0 failed.
   * Source/Search/LCBooleanQuery.m:
   * Source/Search/LCFuzzyQuery.m:
   * Source/Search/LCTermQuery.m:
   * Source/Search/LCPrefixQuery.m:
   Utilize LCStringFromBoost().
   * Source/Index/LCFieldsReader.m: